# McErlang

./: .gitignore  INSTALLATION  LICENSING  Makefile.in  NEWS  README  configure  configure.ac
Ltl2Buchi/: LICENSING  Makefile  README
Ltl2Buchi/ebin/: Emakefile
Ltl2Buchi/src/: buchi.erl  buchi_reduce.erl  buchi_utils.erl  ltl.erl  ltl2buchi.erl  ltl_parse.erl  ltl_parser.yrl  ltl_rewrite.erl  ltl_utils.erl
Ltl2Buchi/test/: Emakefile  README  ltl2buchi_eqc.erl
Ltl2Buchi_glue/: Makefile
Ltl2Buchi_glue/src/: buchi2mcerlang.erl  ltl2mcerlang.erl  mce_buechi_gen.erl  mce_ltl_parse.erl  mce_ltl_parser.yrl  mce_ltl_scan.erl
McErlang_Emacs_mode/: README  mcerl-ext.el
abstractions/ebin/: Emakefile
abstractions/src/: mce_abs_hash.erl  mce_abs_none.erl  mce_abs_norm.erl
algorithms/ebin/: Emakefile
algorithms/src/: mce_alg_buechi.erl  mce_alg_combine.erl  mce_alg_debugger.erl  mce_alg_equiv.erl  mce_alg_safety.erl  mce_alg_safety_parallel.erl  mce_alg_safety_parallel_variant1.erl  mce_alg_safety_parallel_variant2.erl  mce_alg_safety_rnd.erl  (+2 more)
app/: Makefile
bininst/: INSTALLATION  LICENCING  NEWS  README  mcerl_compiler  mcerlang_install.erl
configuration/: funinfo.txt
ebin/: Emakefile
examples/: Makefile  pmake.mk
languages/: Makefile
scripts/: gen_edoc.sh  mcerl  mcerl_compiler  mkcompiledsourcedist  mkrelease  mksourcedist  mkversion  run_dialyzer
src/: mce.erl  mce_actions.erl  mce_bitarray.erl  mce_conf.erl  mce_dot.erl  mce_quickcheck_commands.erl  mce_random.erl  mce_result.erl  mce_set.erl  mce_utils.erl  mce_workersCoordinator.erl
(+157 files in other folders)
