AC_INIT([mcerlang], [2.1.1], [lfredlund@fi.upm.es]) 

AC_PREREQ([2.64])  

AC_COPYRIGHT([Copyright (C) 2006-2010 Lars-Åke Fredlund]) 

AC_ERLANG_NEED_ERLC

AC_ERLANG_SUBST_LIB_DIR

AC_ERLANG_SUBST_INSTALL_LIB_SUBDIR([mcerlang], [2.1.1])

AC_CONFIG_FILES([ \
        Makefile \
        ]) 

AC_OUTPUT 